# OperationUrd

./: .gitignore  Custom.kicad_sym  LICENSE  README.md  bom_adder.py  master_bom.csv  output.csv  zip_gerbers.sh
Custom.pretty/: BAT-HLD-005-THM.kicad_mod  SOP-8_4.93mmxP1.27mm.kicad_mod
cad/: Urd.step
cad/Case/: Onshape link  Urd.step
cad/PCBs/: master_bom.csv  zip_gerbers.sh
code/urd/: Cargo.toml  Embed.toml  memory.x
code/urd/.cargo/: config
code/urd/src/: button.rs  cycle_counter.rs  helpers.rs  main.rs  nixies.rs
final/: Custom.bak  Custom.kicad_sym  fp-info-cache  urd.kicad_pcb  urd.kicad_prl  urd.kicad_pro  urd.kicad_sch
final/Custom.pretty/: BAT-HLD-005-THM.kicad_mod  IN12.kicad_mod  MTS-101.kicad_mod  SMDRS1275-101N.kicad_mod  mouse-bite-5mm-slot.kicad_mod  mouse-bite-5mm-slot2.kicad_mod
final/Manufacture/: bom.csv
mechanical_switch_breakout/: mechanical_switch_breakout.kicad_pcb  mechanical_switch_breakout.kicad_sch
microcontroller/: fp-lib-table  microcontroller.kicad_pcb  microcontroller.kicad_pro  microcontroller.kicad_sch
microcontroller/manufacture/: microcontroller-B_Mask.gbr  microcontroller-B_Silkscreen.gbr  microcontroller-F_Cu.gbr  microcontroller-NPTH.drl  (+3 more)
nixie_board/: nixie.kicad_sch  nixie_board.kicad_pcb  nixie_board.kicad_pro  nixie_board.kicad_sch  script.py  sym-lib-table
power_supply/: power_supply.kicad_pcb  power_supply.kicad_pro  power_supply.kicad_sch
prototype/: Custom.kicad_sym  fp-info-cache  urd.kicad_sch
toggle_switch_breakout/: toggle_switch_breakout.kicad_pcb  toggle_switch_breakout.kicad_sch
(+151 files in other folders)
